--- a/Sources/App/Modules/Blog/Bundle/Templates/Admin/Links/Edit.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Admin/Links/Edit.html
@@ -1,6 +1,5 @@
-#define(toolbarLeft):
+#define(toolbarRightBefore):
     <a href="/admin/blog/authors/#Request(parameter: "id")">#svg("user")</a>
-    <a href="/admin/blog/authors/#Request(parameter: "id")/links">#svg("link")</a>
 #enddefine
 #define(fields):
     <input type="hidden" name="authorId" value="#Request(parameter: "id")">
