--- a/Sources/App/Modules/Site/Bundle/Templates/Admin/Settings.html
+++ b/Sources/App/Modules/Site/Bundle/Templates/Admin/Settings.html
@@ -2,93 +2,92 @@
     Site settings
 #enddefine
 #define(body):
-<div id="site-settings" class="wrapper w">
-    <div id="form" class="wrapper w">
-        <form id="site-settings-form" class="m:xl" method="post" action="#($req.url.path)" enctype="multipart/form-data">
-            #var(field = nil)
+<div id="site-settings" class="content">
+    
+    <form id="site-settings-form" class="m" method="post" action="#($req.url.path)" enctype="multipart/form-data">
+        #var(field = nil)
 
-            #(field = ["id": "formId", "value": formId])
+        #(field = ["id": "formId", "value": formId])
+        #inline("Admin/Fields/Hidden")
+
+        </fieldset>
+
+        <fieldset>
+            <legend>General</legend>
+            
+            #(field = ["id": "formToken", "value": formToken])
             #inline("Admin/Fields/Hidden")
 
-            </fieldset>
+            #(field = ["id": "image", "label": "Logo", "class": "small", "data": fields.image, "accept": "image/png"])
+            #inline("Admin/Fields/File")
 
-            <fieldset class="p m:bottom:l br:xs">
-                <legend class="p:horizontal:s">General</legend>
-                
-                #(field = ["id": "formToken", "value": formToken])
-                #inline("Admin/Fields/Hidden")
+            #(field = ["id": "title", "required": true, "data": fields.title])
+            #inline("Admin/Fields/Text")
 
-                #(field = ["id": "image", "label": "Logo", "class": "small", "data": fields.image, "accept": "image/png"])
-                #inline("Admin/Fields/File")
+            #(field = ["id": "excerpt", "size": "s", "data": fields.excerpt])
+            #inline("Admin/Fields/Textarea")
 
-                #(field = ["id": "title", "required": true, "data": fields.title])
-                #inline("Admin/Fields/Text")
+        </fieldset>
 
-                #(field = ["id": "excerpt", "size": "small", "data": fields.excerpt])
-                #inline("Admin/Fields/Textarea")
-
-            </fieldset>
-
-            <fieldset class="p m:bottom:l br:xs">
-                <legend class="p:horizontal:s">Localization</legend>
-                
-                #(field = ["id": "locale", "label": "Locale", "required": true, "data": fields.locale])
-                #inline("Admin/Fields/Selection")
-                
-                #(field = ["id": "timezone", "required": true, "data": fields.timezone])
-                #inline("Admin/Fields/Selection")
+        <fieldset>
+            <legend>Localization</legend>
             
-            </fieldset>
-
-            <fieldset class="p m:bottom:l br:xs">
-                <legend class="p:horizontal:s">Design</legend>
-
-                #(field = ["id": "primaryColor", "label": "Primary link color", "more": "e.g #cafe00", "data": fields.primaryColor])
-                #inline("Admin/Fields/Text")
-                
-                #(field = ["id": "secondaryColor", "label": "Secondary link color", "more": "e.g #cafe00", "data": fields.secondaryColor])
-                #inline("Admin/Fields/Text")
-                
-                #(field = ["id": "fontFamily", "label": "Font family", "more": "e.g sans-serif", "data": fields.fontFamily])
-                #inline("Admin/Fields/Text")
-                
-                #(field = ["id": "fontSize", "label": "Base font size", "more": "e.g 16px", "data": fields.fontSize])
-                #inline("Admin/Fields/Text")
-
-            </fieldset>
-
-            <fieldset class="p m:bottom:l br:xs">
-                <legend class="p:horizontal:s">Code injection</legend>
-                
-                #(field = ["id": "css", "size": "small", "data": fields.css])
-                #inline("Admin/Fields/Textarea")
-                
-                #(field = ["id": "js", "size": "small", "data": fields.js])
-                #inline("Admin/Fields/Textarea")
+            #(field = ["id": "locale", "label": "Locale", "required": true, "data": fields.locale])
+            #inline("Admin/Fields/Selection")
             
-            </fieldset>
+            #(field = ["id": "timezone", "required": true, "data": fields.timezone])
+            #inline("Admin/Fields/Selection")
+        
+        </fieldset>
 
-            <fieldset class="p m:bottom:l br:xs">
-                <legend class="p:horizontal:s">Footer</legend>
-                
-                #(field = ["id": "footer", "label": "Top area", "size": "small", "data": fields.footer])
-                #inline("Admin/Fields/Textarea")
-                
-                #(field = ["id": "footerBottom", "label": "Bottom area", "size": "small", "data": fields.footerBottom])
-                #inline("Admin/Fields/Textarea")
-                
-                #(field = ["id": "copy", "label": "Copyright", "size": "small", "required": true, "data": fields.copy])
-                #inline("Admin/Fields/Textarea")
-                
-                #(field = ["id": "copyYearStart", "label": "Copyright start year", "data": fields.copyYearStart])
-                #inline("Admin/Fields/Text")
+        <fieldset>
+            <legend>Design</legend>
+
+            #(field = ["id": "primaryColor", "label": "Primary link color", "more": "e.g #cafe00", "data": fields.primaryColor])
+            #inline("Admin/Fields/Text")
             
-            </fieldset>
+            #(field = ["id": "secondaryColor", "label": "Secondary link color", "more": "e.g #cafe00", "data": fields.secondaryColor])
+            #inline("Admin/Fields/Text")
+            
+            #(field = ["id": "fontFamily", "label": "Font family", "more": "e.g sans-serif", "data": fields.fontFamily])
+            #inline("Admin/Fields/Text")
+            
+            #(field = ["id": "fontSize", "label": "Base font size", "more": "e.g 16px", "data": fields.fontSize])
+            #inline("Admin/Fields/Text")
 
-            #(field = ["label": "Save"])
-            #inline("Admin/Fields/Button")
-        </form>
-    </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>Code injection</legend>
+            
+            #(field = ["id": "css", "size": "xl", "data": fields.css])
+            #inline("Admin/Fields/Textarea")
+            
+            #(field = ["id": "js", "size": "xl", "data": fields.js])
+            #inline("Admin/Fields/Textarea")
+        
+        </fieldset>
+
+        <fieldset>
+            <legend>Footer</legend>
+            
+            #(field = ["id": "footer", "label": "Top area", "size": "s", "data": fields.footer])
+            #inline("Admin/Fields/Textarea")
+            
+            #(field = ["id": "footerBottom", "label": "Bottom area", "size": "s", "data": fields.footerBottom])
+            #inline("Admin/Fields/Textarea")
+            
+            #(field = ["id": "copy", "label": "Copyright", "size": "s", "required": true, "data": fields.copy])
+            #inline("Admin/Fields/Textarea")
+            
+            #(field = ["id": "copyYearStart", "label": "Copyright start year", "data": fields.copyYearStart])
+            #inline("Admin/Fields/Text")
+        
+        </fieldset>
+
+        #(field = ["label": "Save"])
+        #inline("Admin/Fields/Button")
+    </form>
 </div>
 #enddefine
 #inline("Admin/Index")
