--- a/Sources/App/Modules/Blog/Bundle/Templates/Admin/Authors/Edit.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Admin/Authors/Edit.html
@@ -1,12 +1,12 @@
-#define(toolbarLeft):
+#define(toolbarLeftAfter):
     #if(fields.modelId != nil):
-    <a href="/admin/frontend/metadatas/#(fields.metadata.id)">#svg("feather")</a>
     <a href="#if(!fields.metadata.slug.isEmpty()):/#(fields.metadata.slug)/#else:/#endif" target="_blank">#svg("eye")</a>
     #endif
 #enddefine
 #define(toolbarRightBefore):
     #if(fields.modelId != nil):
-    <a href="/admin/blog/authors/#(fields.modelId)/links">#svg("link")</a>
+    <a href="/admin/blog/authors/#(fields.modelId)/links">#svg("link-2")</a>
+    <a href="/admin/frontend/metadatas/#(fields.metadata.id)">#svg("feather")</a>
     #endif
 #enddefine
 #define(fields):
@@ -18,7 +18,7 @@
     #(field = ["id": "name", "required": true, "data": fields.name])
     #inline("Admin/Fields/Text")
 
-    #(field = ["id": "bio", "size": "small", "data": fields.bio])
+    #(field = ["id": "bio", "size": "s", "data": fields.bio])
     #inline("Admin/Fields/Textarea")
 
 #enddefine
