--- a/Sources/App/Modules/Blog/Bundle/Templates/Admin/Authors/List.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Admin/Authors/List.html
@@ -1,13 +1,13 @@
 #define(css):
 tr {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 @media (max-width: 599px) {
-    th:nth-of-type(1), th:nth-of-type(3), th:nth-of-type(4) {
+    th:nth-of-type(1), th:nth-of-type(3), th:nth-of-type(4), th:nth-of-type(5) {
         display: none;
     }
     th:nth-of-type(2), td:nth-of-type(1), td:nth-of-type(2)  {
-        grid-column: span 2;
+        grid-column: span 3;
     }
     td:nth-of-type(2) {
         padding-bottom: 16px;
@@ -28,19 +28,19 @@ tr {
 #enddefine
 #define(th):
     #var(link = nil)
-    <th class="t:center">Image</th>
-    <th class="t:left m:horizontal:s">#(link = ["key": "name", "default": true])#inline("Admin/SortLink")</th>
-    <th class="t:center">Links</th>
+    <th class="td:center">Image</th>
+    <th class="td:left m:h:s">#(link = ["key": "name", "default": true])#inline("Admin/SortLink")</th>
+    <th class="td:center">Links</th>
     #inline("Admin/TableActionLabels")
 #enddefine
 #define(tr):
     #for(item in list.items):
 <tr>
-    <td class="t:center">
-        <a href="#($req.url.path)#(item.id)/"><img class="w64 br:circular" src="#(item.imageKey.resolve())" alt="#(item.name)"></a>
+    <td class="td:center">
+        <a href="#($req.url.path)#(item.id)/"><img class="s64 r:circular" src="#(item.imageKey.resolve())" alt="#(item.name)"></a>
     </td>
-    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.name)</a></td>
-    <td class="t:center"><a href="#($req.url.path)#(item.id)/links/">#svg("link")</a></td>
+    <td class="td:left m:h:s"><a href="#($req.url.path)#(item.id)/">#(item.name)</a></td>
+    <td class="td:center"><a href="#($req.url.path)#(item.id)/links/">#svg("link-2")</a></td>
     #inline("Admin/TableActionButtons")
 </tr>
     #endfor
