--- a/Sources/App/Modules/Blog/Bundle/Templates/Admin/Categories/List.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Admin/Categories/List.html
@@ -28,19 +28,19 @@ tr {
 #enddefine
 #define(th):
     #var(link = nil)
-    <th class="t:center">Image</th>
-    <th class="t:left m:horizontal:s">#(link = ["key": "title", "default": true])#inline("Admin/SortLink")</th>
-    <th class="t:center">#(link = ["key": "priority"])#inline("Admin/SortLink")</th>
+    <th class="td:center">Image</th>
+    <th class="td:left m:h:s">#(link = ["key": "title", "default": true])#inline("Admin/SortLink")</th>
+    <th class="td:center">#(link = ["key": "priority"])#inline("Admin/SortLink")</th>
     #inline("Admin/TableActionLabels")
 #enddefine
 #define(tr):
     #for(item in list.items):
 <tr>
-    <td class="t:center">
-        <a href="#($req.url.path)#(item.id)/"><img class="w64 br:s" src="#(item.imageKey.resolve())" alt="#(item.title)"></a>
+    <td class="td:center">
+        <a href="#($req.url.path)#(item.id)/"><img class="s64 r:s" src="#(item.imageKey.resolve())" alt="#(item.title)"></a>
     </td>
-    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></td>
-    <td class="t:center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></td>
+    <td class="td:left m:h:s"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></td>
+    <td class="td:center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></td>
     #inline("Admin/TableActionButtons")
 </tr>
     #endfor
