--- a/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Author.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Author.html
@@ -6,22 +6,22 @@
 ])
 #define(body):
 
-<div id="author" class="wrapper w:full m:xl">
-
-    <header class="m:bottom:l center">
-        <img class="w128 br:circular" src="#(author.imageKey.resolve())" alt="Picture of #(author.name)" title="#(author.name)">
-        <h1>#(head.title)</h1>
+<div id="posts" class="m">
+    <header class="t:center m:b:xl">
+        <img class="s128 r:circular" src="#(author.imageKey.resolve())" alt="Picture of #(author.name)" title="#(author.name)">
+        <h1 class="m:t">#(head.title)</h1>
         <p>#(head.description)</p>
         #for(link in author.links):
         <a href="#(link.url)" target="_blank">#(link.name)</a> #if(!isLast): &middot; #endif
         #endfor
+        <span><strong>#(posts.count()) post#if(posts.count() > 1):s#endif</strong></span>
     </header>
 
-    <div class="g6 g:gap:l:hd">
-    #for(post in posts):
-        #let(size = 2)
-        #inline("Blog/Frontend/SinglePost")
-    #endfor
+    <div class="g321 g:gap:col g:gap:row:xl">
+        #for(post in posts):
+            #let(size = 1)
+            #inline("Blog/Frontend/SinglePost")
+        #endfor
     </div>
 </div>
 
