--- a/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Post.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Post.html
@@ -7,33 +7,35 @@
 #define(body):
 
 <article id="post">
-    <div class="wrapper w">
-        <header class="m:xl">
+    <div class="content">
+        <header class="m">
             <p>
-                <span class="underline"#if(post.category.color != nil): style="border-color: #(post.category.color);"#endif>#(post.category.title)</span>
+                <span class="c:underline:accent"#if(post.category.color != nil): style="border-color: #(post.category.color);"#endif>#(post.category.title)</span>
                 &middot;
                 #let(dateString = Date(timeStamp: post.metadata.date, fixedFormat: $app.dateFormats.date, timeZone: $app.timezone))
                 <time datetime="#(dateString)">#(dateString)</time>
             </p>
-            <h1 class="m:bottom:s">#(post.title)</h1>
-            <p class="m:zero">#(post.excerpt)</p>
+            <h1 class="m:t">#(post.title)</h1>
+            <p>#(post.excerpt)</p>
         </header>
     </div>
 
-    <div class="wrapper w:full">
-        <section class="m:xl">
-            <img class="block br:s" style="box-shadow: 0 8px 38px rgba(0,0,0,0.10), 0 4px 12px rgba(0,0,0,0.12);" src="#(post.imageKey.resolve())">
+    <div class="content:full">
+        <section class="m">
+            <img class="block r:xs w:full" style="box-shadow: 0 8px 38px rgba(0,0,0,0.10), 0 4px 12px rgba(0,0,0,0.12);" src="#(post.imageKey.resolve())">
         </section>
     </div>
 
-    #(post.content)
+    <div id="content" class="content:full">
+        #(post.content)
+    </div>
 
 </article>
 
 #inline("Sponsor/Box")
 
 #if($system["share.isEnabled"] != nil && $system["share.isEnabled"] == "true"):
-<div class="wrapper w center">
+<div class="content t:center">
     <section id="share" class="m:xl">
         <hr>
         <p>#($system["share.link.prefix"] ?? "") <a href="https://twitter.com/intent/tweet?via=#($system["share.author"] ?? "")&hashtags=#($system["share.hashtags"] ?? "")&url=#($app.baseUrl)#($req.url.path)" target="_blank">#($system["share.link"] ?? "Share on Twitter")</a> #($system["share.link.suffix"] ?? "")</p>
@@ -42,9 +44,9 @@
 #endif
 
 #if($system["post.author.isEnabled"] != nil && $system["post.author.isEnabled"] == "true"):
-<div class="wrapper w center">
+<div class="content t:center">
     <section class="m:xl">
-        <img class="w128 br:circular" src="#(post.author.imageKey.resolve())" alt="Picture of #(post.author.name)" title="#(post.author.name)">
+        <img class="s128 r:circular" src="#(post.author.imageKey.resolve())" alt="Picture of #(post.author.name)" title="#(post.author.name)">
         <h3 class="m:top:s">#(post.author.name)</h3>
         <p>#(post.author.bio)</p>
         #for(link in post.author.links):
