--- a/Sources/App/Modules/Static/Bundle/Templates/Admin/Pages/Edit.html
+++ b/Sources/App/Modules/Static/Bundle/Templates/Admin/Pages/Edit.html
@@ -1,7 +1,11 @@
-#define(toolbarLeft):
+#define(toolbarLeftAfter):
+    #if(fields.modelId != nil):
+    <a href="#if(!fields.metadata.slug.isEmpty()):/#(fields.metadata.slug)/#else:/#endif" target="_blank">#svg("eye")</a>
+    #endif
+#enddefine
+#define(toolbarRightBefore):
     #if(fields.modelId != nil):
     <a href="/admin/frontend/metadatas/#(fields.metadata.id)">#svg("feather")</a>
-    <a href="#if(!fields.metadata.slug.isEmpty()):/#(fields.metadata.slug)/#else:/#endif" target="_blank">#svg("eye")</a>
     #endif
 #enddefine
 #define(fields):
