--- a/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Categories.html
+++ b/Sources/App/Modules/Blog/Bundle/Templates/Frontend/Categories.html
@@ -1,30 +1,26 @@
 #let(head = [
-    "title": $vars["categories.page.title"],
-    "description": $vars["categories.page.description"],
+    "title": $system["categories.page.title"],
+    "description": $system["categories.page.description"],
     "css": metadata.css,
     "js": metadata.js
 ])
 #define(body):
-<div id="categories" class="wrapper w">
-    <div class="m:xl">
-        <header class="m:bottom:l center">
-            <h1>#(head.title)</h1>
-            <p>#(head.description)</p>
-        </header>
+<div id="posts" class="m">
+    <header class="t:center m:b:xl">
+        <h1 class="m:t">#(head.title)</h1>
+        <p>#(head.description)</p>
+    </header>
 
-        <section class="m:l">
-            <ul class="lst:none p:zero">
-                #for(category in categories):
-                <li class="p:l br center bg3 m:bottom:l">
-                    <a href="/#(category.metadata.slug)">
-                        <img class="w128 br" src="#(category.imageKey.resolve())">
-                    </a>
-                    <h3><a href="/#(category.metadata.slug)">#(category.title)</a></h3>
-                    <p>#(category.excerpt)</p>
-                </li>
-                #endfor
-            </ul>
-        </section>
+    <div class="g1 g:gap:col g:gap:row:xl">
+        #for(category in categories):
+        <div class="g:col1 t:center">
+            <a href="/#(category.metadata.slug)">
+                <img class="s128 r:xs" src="#(category.imageKey.resolve())">
+            </a>
+            <h3 class="m:t"><a href="/#(category.metadata.slug)">#(category.title)</a></h3>
+            <p>#(category.excerpt)</p>
+        </div>
+        #endfor
     </div>
 </div>
 #enddefine
